# toolkit

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup-hooks.sh  test-hook-quick.sh  test-hook.sh
.githooks/: README.md  (+1 more)
get_github_coderabbit_review/: .gitignore  .pre-commit-config.yaml  AI_AGENT_OUTPUT_IMPROVEMENTS.md  AI_AGENT_QUICKSTART.md  CLAUDE.md  DEVELOPMENT.md  GITHUB_API_REFACTOR.md  IMPROVEMENT_ROADMAP.md  LICENSE  Makefile  Makefile.precommit  Makefile.push  PHASE1_COMPLETION_REPORT.md  PHASE2_COMPLETION_REPORT.md  PHASE3_COMPLETION_REPORT.md  PHASE4_COMPLETION_REPORT.md  README.md  README_CI_CD.md  current_dynamic_output.md  current_final_output.md  current_language_check.md  current_output.md  current_simple_output.md  demo_api_usage.py  expected_pr_2_ai_agent_prompt.md  expected_pr_2_ai_agent_prompt_final.md  expected_pr_38_ai_agent_prompt.md  final_output_test.md  final_quality_assessment.md  github_dots_pr_38.json  github_llcg_pr_2.json  hoge.json  output_dots_pr38.md  output_llcg_pr2.md  pr2_corrected_specification_compliant.xml  pr2_expected_output_v2.xml  pr2_expected_output_v2_corrected.xml  pr38_corrected_final.xml  pr38_corrected_specification_compliant.xml  pr_104_ai_friendly_comments.json  (+10 more)
get_github_coderabbit_review/.github/workflows/: docs-update.yml  lint-and-format.yml  pr-validation.yml  security-scan.yml  test-coderabbit-fetcher.yml
get_github_coderabbit_review/.specs/: design.md  requirements.md  tasks.md
get_github_coderabbit_review/.specs/ja/: design_ja.md  requirements_ja.md  tasks_ja.md
get_github_coderabbit_review/auth/: __init__.py  rbac.py
get_github_coderabbit_review/cicd/: __init__.py  github_actions.py
get_github_coderabbit_review/coderabbit_fetcher/: __init__.py  __main__.py  comment_analyzer.py  comment_poster.py  github_client.py  orchestrator.py  persona_manager.py  resolved_marker.py  validation.py
get_github_coderabbit_review/coderabbit_fetcher/ai/: __init__.py  code_analyzer.py  comment_classifier.py  llm_client.py  prompt_templates.py  sentiment_analyzer.py
get_github_coderabbit_review/coderabbit_fetcher/analyzer/: __init__.py  comment_analyzer.py
get_github_coderabbit_review/coderabbit_fetcher/analyzers/: __init__.py  comment_classifier.py  metadata_enhancer.py  resolution_detector.py  structured_comment_parser.py
get_github_coderabbit_review/coderabbit_fetcher/async_processing/: __init__.py  async_batch_processor.py  async_comment_analyzer.py  async_github_client.py  async_orchestrator.py  async_task_manager.py
get_github_coderabbit_review/coderabbit_fetcher/cache/: __init__.py  cache_manager.py  file_cache.py  memory_cache.py  redis_cache.py
get_github_coderabbit_review/coderabbit_fetcher/cli/: __init__.py  main.py  parser.py
get_github_coderabbit_review/coderabbit_fetcher/config/: __init__.py  constants.py
get_github_coderabbit_review/coderabbit_fetcher/dashboard/: __init__.py  web_server.py
get_github_coderabbit_review/coderabbit_fetcher/dependency_injection/: __init__.py  container.py  decorators.py  providers.py
get_github_coderabbit_review/coderabbit_fetcher/events/: __init__.py  event_aggregator.py  event_bus.py  event_store.py
get_github_coderabbit_review/coderabbit_fetcher/exceptions/: __init__.py  analysis.py  auth.py  base.py  network.py  parsing.py  persona.py  retry.py  utils.py  validation.py
get_github_coderabbit_review/coderabbit_fetcher/formatters/: __init__.py  ai_agent_prompt_formatter.py  base.py  base_formatter.py  factory.py  json_formatter.py  llm_instruction_formatter.py  markdown.py  markdown_formatter.py  plain.py  plaintext_formatter.py
get_github_coderabbit_review/coderabbit_fetcher/github/: __init__.py  client.py  comment_poster.py
get_github_coderabbit_review/coderabbit_fetcher/ml/: __init__.py  feature_extractor.py
get_github_coderabbit_review/coderabbit_fetcher/models/: __init__.py  actionable_comment.py  ai_agent_prompt.py  analyzed_comments.py  base.py  comment_metadata.py  review_comment.py  summary_comment.py  thread_context.py
get_github_coderabbit_review/coderabbit_fetcher/patterns/: __init__.py  factory.py  observer.py  strategy.py
get_github_coderabbit_review/coderabbit_fetcher/processors/: __init__.py  comment_parser.py  content_analyzer.py  output_formatter.py  review_processor.py  summary_processor.py  thread_processor.py  thread_processor.py.bak
get_github_coderabbit_review/coderabbit_fetcher/templates/: verification_selector.py
get_github_coderabbit_review/coderabbit_fetcher/utils/: __init__.py  code_quality.py  diff_extractor.py  memory_manager.py  streaming_processor.py
get_github_coderabbit_review/docs/: AI_AGENT_PROMPT_SPECIFICATION.md  AI_AGENT_PROMPT_SPECIFICATION_JA.md  API.md  LLM_INSTRUCTION_FORMAT.md  LLM_INSTRUCTION_FORMAT_JA.md  PERSONA_GUIDE.md  TROUBLESHOOTING.md
get_github_coderabbit_review/examples/: usage_examples.md
get_github_coderabbit_review/examples/personas/: default_reviewer.txt  japanese_reviewer.txt  security_expert.txt  senior_architect.txt
get_github_coderabbit_review/examples/sample_outputs/: json_example.json  markdown_example.md  plain_example.txt
get_github_coderabbit_review/i18n/: __init__.py  localization.py
get_github_coderabbit_review/microservices/: __init__.py  api_gateway.py
get_github_coderabbit_review/scripts/: test_uvx_installation.py  validate-ci.sh
get_github_coderabbit_review/templates/: ai_agent_prompt_template.md  coderabbit_ai_agent_prompt.md
get_github_coderabbit_review/tests/: HOOK_TEST.md  README.md  __init__.py  run_essential_tests.py  test_github_client_safe.py  test_runner.py
get_github_coderabbit_review/tests/fixtures/: __init__.py  github_responses.py  persona_files.py  sample_data.py
get_github_coderabbit_review/tests/integration/: test_e2e_workflow.py  test_github_integration.py  test_orchestrator.py  test_phase1_integration.py  test_pr38_exact_match.py
get_github_coderabbit_review/tests/performance/: __init__.py  test_performance.py
get_github_coderabbit_review/tests/pr2/: README.md  __init__.py  test_pr2_mock_helpers.py  test_pr2_quiet_mode.py  (+1 more)
(+40 files in other folders)
