[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "coderabbit-comment-fetcher"
version = "1.0.0"
description = "Professional tool to fetch, analyze, and format CodeRabbit comments from GitHub Pull Requests with AI-agent optimization"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "CodeRabbit Fetcher Team", email = "coderabbit-fetcher@example.com" }
]
maintainers = [
    { name = "CodeRabbit Fetcher Team", email = "coderabbit-fetcher@example.com" }
]
keywords = [
    "coderabbit",
    "github",
    "code-review",
    "ai",
    "automation",
    "pr-analysis",
    "claude-4",
    "github-cli",
    "comment-analysis",
    "ai-agents"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Bug Tracking",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    # Core dependencies - minimal for basic functionality
    "typing-extensions>=4.8.0; python_version<'3.14'",
    "pydantic>=2.5.0",
    "rich>=13.7.0",
    "psutil>=5.9.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
# Full feature set (recommended for most users)
full = [
    # Full feature dependencies will be added here as needed
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.3.0",
    "coverage[toml]>=7.3.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "pre-commit>=3.6.0",
]

# Performance testing dependencies
performance = [
    "memory-profiler>=0.61.0",
]

# Documentation dependencies
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
]

# All dependencies combined
all = [
    "coderabbit-comment-fetcher[full,performance]",
]

[project.scripts]
coderabbit-fetch = "coderabbit_fetcher.cli.main:main"
crf = "coderabbit_fetcher.cli.main:main"

[project.urls]
Homepage = "https://github.com/yohi/coderabbit-comment-fetcher"
Repository = "https://github.com/yohi/coderabbit-comment-fetcher"
Documentation = "https://github.com/yohi/coderabbit-comment-fetcher#readme"
Issues = "https://github.com/yohi/coderabbit-comment-fetcher/issues"

[tool.hatch.build.targets.wheel]
packages = ["coderabbit_fetcher"]

[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["coderabbit_fetcher"]

[tool.mypy]
python_version = "3.13"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = false

# 高度な型システム問題を選択的に無視
disable_error_code = [
    "operator",      # 型演算子の複雑な問題
    "call-arg",      # 複雑な関数引数の型問題
    "override",      # 継承メソッドのシグネチャ不整合
    "dict-item",     # 辞書型の詳細な型不整合
    "misc",          # その他の高度な型問題
]

# 型チェックを緩和する設定
ignore_missing_imports = true
follow_imports = "skip"
show_error_codes = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow running",
]

[tool.coverage.run]
source = ["coderabbit_fetcher"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[[tool.mypy.overrides]]
module = [
    "coderabbit_fetcher.formatters.*",
    "coderabbit_fetcher.processors.*",
    "coderabbit_fetcher.ai.*"
]
# 複雑なモジュールでは厳格さを緩和
disable_error_code = ["attr-defined", "union-attr", "index", "assignment"]
